# graph-metabolic-manager

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  PATENT_NOTICE.md  README.md  README_ja.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
benchmarks/: scalability.py
docs/: algorithm_overview.md  examples_guide.md  patent_claim_mapping.md  verification_report.md
docs/data-flow/: figures_guide.md  generate_figures.py  processing_flow.md
docs/note-series/: 00_series_plan.md  01_introduction.md  02_metabolic.md  03_rarity.md  04_consistency.md  05_meta_control.md  06_patent_oss.md
docs/paper-series/: 00_シリーズ概要.md  01_概要編.md  02_代謝制御編.md  03_希少性保護編.md  04_整合性発見編.md  05_メタ制御編.md  06_検証編.md
examples/: 01_basic_usage.py  02_ec_recommendation.py  03_knowledge_base.py  04_medical_knowledge.py  05_financial_network.py  06_iot_manufacturing.py  07_telecom_network.py  08_cybersecurity.py  09_supply_chain.py  10_education_curriculum.py  11_smart_grid.py  12_academic_citation.py  13_agriculture_food_safety.py  14_legal_compliance.py  15_hr_talent.py  16_real_estate.py  17_insurance_actuarial.py  18_environmental_monitoring.py  19_transportation.py  20_social_network.py  21_gaming.py  22_media_advertising.py  23_aviation.py  24_pharma_manufacturing.py  25_water_management.py  26_construction.py  27_mining.py  28_hospitality.py  _runner.py
graph_metabolic_manager/: __init__.py  _logging.py  consistency.py  graph.py  manager.py  meta_control.py  metabolic.py  rarity.py
streamlit_app/: app.py
streamlit_app/components/: __init__.py  graph_viz.py  sample_graphs.py
streamlit_app/pages/: 1_metabolic.py  2_rarity.py  3_consistency.py  4_meta_control.py  5_pipeline.py
tests/: conftest.py  test_consistency.py  test_graph.py  test_hierarchy.py  test_integration.py  test_math_model.py  test_meta_control.py  test_metabolic.py  test_patent_verification.py  test_rarity.py  test_trace_logging.py
